[gd_scene load_steps=6 format=3 uid="uid://dy65mue2yk24d"]

[ext_resource type="Script" path="res://scripts/background_LevelsMenu.gd" id="1_ee6yg"]
[ext_resource type="Texture2D" uid="uid://cvao17v5rfpfs" path="res://assets/background/menu.png" id="1_vfors"]
[ext_resource type="Script" path="res://scripts/Menu_selection.gd" id="1_w71g0"]
[ext_resource type="Texture2D" uid="uid://eta3sfmpdmqa" path="res://assets/menu/voltar.png" id="3_4md8r"]
[ext_resource type="PackedScene" uid="uid://cqd2wqvm76h6b" path="res://scenes/button_level.tscn" id="4_76jns"]

[node name="Levels" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_ee6yg")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_right = 1151.0
offset_bottom = 649.0
texture = ExtResource("1_vfors")
expand_mode = 1

[node name="Menu_selection" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1154.0
offset_bottom = 649.0
script = ExtResource("1_w71g0")

[node name="Button_back" type="Button" parent="Menu_selection"]
layout_mode = 0
offset_left = 52.0
offset_top = 537.0
offset_right = 152.0
offset_bottom = 617.0
action_mode = 0
keep_pressed_outside = true
flat = true

[node name="TextureButton" type="TextureButton" parent="Menu_selection/Button_back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
texture_normal = ExtResource("3_4md8r")
ignore_texture_size = true
stretch_mode = 0

[node name="Level1" parent="Menu_selection" instance=ExtResource("4_76jns")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 181.0
offset_top = 214.0
offset_right = 617.0
offset_bottom = 621.0
grow_horizontal = 1
grow_vertical = 1

[node name="Level2" parent="Menu_selection" instance=ExtResource("4_76jns")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 274.0
offset_top = 336.0
offset_right = 710.0
offset_bottom = 743.0
grow_horizontal = 1
grow_vertical = 1

[node name="Level3" parent="Menu_selection" instance=ExtResource("4_76jns")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 401.0
offset_top = 273.0
offset_right = 837.0
offset_bottom = 680.0
grow_horizontal = 1
grow_vertical = 1

[node name="Level4" parent="Menu_selection" instance=ExtResource("4_76jns")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 434.0
offset_top = 110.0
offset_right = 870.0
offset_bottom = 517.0
grow_horizontal = 1
grow_vertical = 1

[node name="Level5" parent="Menu_selection" instance=ExtResource("4_76jns")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 628.0
offset_top = 181.0
offset_right = 1064.0
offset_bottom = 588.0
grow_horizontal = 1
grow_vertical = 1

[node name="Level6" parent="Menu_selection" instance=ExtResource("4_76jns")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 685.0
offset_top = 310.0
offset_right = 1121.0
offset_bottom = 717.0
grow_horizontal = 1
grow_vertical = 1

[node name="Level7" parent="Menu_selection" instance=ExtResource("4_76jns")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 839.0
offset_top = 362.0
offset_right = 1275.0
offset_bottom = 769.0
grow_horizontal = 1
grow_vertical = 1
